# pwiz

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILDING  CLAUDE.md  Jamroot.jam  MEMORY.md  MSDataAnalyzerApplicationTest.temp.txt  NOTICE  README.md  STYLEGUIDE.md  SVN_info.txt  SearchControlLog.txt  TESTING.md  TODO-20251010_webclient_replacement.md  ThermoMethod.bat  UserSettings.data  V19_1.sky  V20_13.sky  WORKFLOW.md  appveyor.yml  bootstrap.bat  bs.bat  build_skyline_64.bat  clean.bat  clean.sh  clean_vendor_targets.bat  create_packages  create_tag  files-with-bom.txt  get_version  localization.gxl  minimalDDA.mzML  mt_build.bat  mt_build_cvgen.bat  mt_build_debug.bat  mt_generate_cv.bat  (+13 more)
.claude/: settings.local.json
.claude/commands/: pw-adopt.md  pw-aicontext.md  pw-aicontextsync.md  pw-aicontextupdate.md  pw-auditdocs.md  pw-checkrules.md  pw-confightml.md  pw-configure.md  pw-context.md  pw-cover.md  pw-cptorelease.md  pw-daily.md  pw-exceptions.md  pw-handoff.md  pw-help.md  pw-issue.md  pw-nightly.md  pw-pcommit.md  pw-pcommitfull.md  pw-rbuildtest.md  pw-rcrw.md  pw-respond.md  pw-rmemory.md  pw-rstyle.md  pw-rtesting.md  pw-startfix.md  pw-startissue.md  pw-startup.md  pw-support.md  pw-upconfig.md  pw-uptodo.md  pw-wrap.md
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml  cherrypick-pr-to-release.yml  cherrypick-to-release.yml  rebase_on_demand.yml  squash_on_demand.yml
20140101_ImportPeakBoundaries/: clean.sh  quickbuild.bat
20140101_ImportPeakBoundaries/doc/: contact.html  index.html  update_sourceforge
20140101_ImportPeakBoundaries/example_data/: 10-spec.cms2  example.prot.xml  small.5peptide_notes.txt  small.msconvert.mzXML  tiny.pwiz.mzid  tiny_miape.pwiz.0.9.4.traML  update_sourceforge
20140101_ImportPeakBoundaries/libraries/: bcp.jam  expat.jam  ext-boost.jam  hdf5-1.8.7.tar.bz2  libfftw3-3.lib  libpng-1.5.6.tar.bz2  readme.txt
20140101_ImportPeakBoundaries/pwiz_tools/: reg-controls.bat
QC_LCMS2-2_23_268-1-1.raw/: _CHROMS.INF  _HEADER.TXT  _extern.inf
ai/: BUILD-TEST.md  CLAUDE.md  CRITICAL-RULES.md  MEMORY.md  README.md  STYLEGUIDE.md  TESTING.md  TOC.md  WORKFLOW-v2.md  WORKFLOW.md
ai/docs/: README.md  ai-context-branch-strategy.md  ai-submodule-strategy.md  architecture-data-model.md  build-and-test-guide.md  claude-commands.md  daily-report-guide.md  debugging-principles.md  developer-setup-guide.html  developer-setup-guide.md  documentation-maintenance.md  exception-triage-system.md  issues-strategy.md  leak-debugging-guide.md  mcp-development-guide.md  new-machine-bootstrap.html  new-machine-bootstrap.md  new-machine-setup.md  nightly-test-analysis.md  project-context.md  release-cycle-guide.md  release-guide.md  scheduled-tasks-guide.md  screenshot-update-workflow.md  skylinetester-debugging-guide.md  skylinetester-guide.md  style-guide.md  testing-patterns.md  translation-guide.md  tutorial-doc-style-guide.md  version-control-guide.md  wiki-support-system.md  workflow-guide-v2.md  workflow-guide.md  workflow-issues-guide.md
ai/mcp/: README.md
ai/scripts/: Generate-TOC.ps1  Invoke-DailyReport.ps1  README.md  Verify-Environment.ps1  analyze-bom-git.ps1  analyze-http-json.ps1  audit-docs.ps1  audit-loc.ps1  audit-skills.ps1  audit-skyline-testdata.ps1  fix-crlf.ps1  remove-bom.ps1  revert-whitespace-only-files.ps1  statusline.ps1  sync-ai-context.ps1  validate-bom-compliance.ps1
ai/todos/: README.md  STARTUP.md
doc/: BaseTemplate.html  Jamfile  build_docs  building.html  building.shtml  contact.html  docs.html  docs.shtml  download.html  faq.html  index.html  index.shtml  index2.html  main.css  people.html  projects.html  projects2.html  styles.css  technical.html
doc/dox/: Doxyfile  (+1 more)
example_data/: 10-spec.bms2  10-spec.cms1  10-spec.ms1  10-spec.ms2  example.pep.xml  example.prot.mzid  example.prot.xml  small.msconvert.mzXML  small_miape.pwiz.1.1.mzML  small_zlib.pwiz.1.0.mzML  small_zlib.pwiz.1.1.mzML  small_zlib.pwiz.mzML  tiny.pwiz.1.1.mzML  tiny.pwiz.mzML  tiny.pwiz.mzML-1.0  tiny.pwiz.mzXML  tiny.pwiz.mzid  update_sourceforge
examples/: small_zlib.pwiz.mzML  tiny.pwiz.mzML  tiny.pwiz.mzXML  tiny2.pwiz.mzML
libraries/: AssertException.hpp  bcp.jam  boost-build.tar.bz2  boost.jam  csv.h  doctest.h  expat.jam  ext-boost.jam  ext-hdf5.jam  ext-png.jam  ext-zlib.jam  ext-zstd.jam  extension.jam  fftw-3.1-dll.tar.bz2  fftw-3.1.2.tar.bz2  freetype-2.4.7.tar.bz2  freetype-VER-2-13-3.tar.bz2  freetype.jam  gd.jam  generate-version.jam  hdf5-1.8.7.tar.bz2  libgd-2.1.0alpha.tar.bz2  msparser_2_3_01_NT_X86.zip.REMOVED.git-id  msparser_2_3_01_NT_X86_64.zip.REMOVED.git-id  msvc.jam  msvc_setup_script.bat  png.jam  readme.txt  svnrev.cpp  svnrev.jam  svnrev_max.cpp  svnrev_max.jam  tar.jam  tss_workaround.cpp  untar_boost-build.bat  untar_boost-build.sh  untar_boost.bat  untar_boost.sh  untar_fftw.bat  untar_fftw.sh  (+5 more)
mt_tools/: copy_lib.cmd  generate_cmake_config.py  pwiz-config-version.cmake  pwiz-config.cmake
pwiz/: Jamfile.jam  Jamroot  Jamroot.jam  Version.cpp  Version.hpp  clean.bat  clean.sh  pwiz.sln  pwiz.vcproj  pwiz.vcxproj  pwiz.vcxproj.filters  pwiz_release_version.cpp  pwiz_release_version.hpp  quickbuild.bat  quickbuild.sh
pwiz-sharp/: .editorconfig  .gitignore  Directory.Build.props  Directory.Build.targets  Pwiz.sln  Pwiz.slnx  README.md  build.bat  clean.bat  i-agree-to-the-vendor-licenses.bat  run-msbench-final.ps1  tcbuild.bat
pwiz-sharp/Tools/BiblioSpec/native/MascotShim/: CMakeLists.txt  MascotShim.cpp  MascotShim.def  MascotShim.h
pwiz-sharp/examples/cpp-aot-reader/: CMakeLists.txt  README.md  main.cpp  pwiz_msdata.h  pwiz_msdata.hpp  run-tests.ps1
pwiz_aux/: Jamfile.jam
pwiz_tools/: Directory.Build.props  Directory.Build.targets  Jamfile.jam  build-apps.bat  build-skyline.bat  clean-apps.bat  reg-controls.bat
pwiz_tools/Skyline/Executables/DevTools/LabKeyMcp/: README.md  pyproject.toml  server.py  test_connection.py
regression/: run_msconvert
scripts/: setpwizenv.bat  setpwizenv.sh
zedgraph/: ZedGraph.csproj  ZedGraph.sln
(+21567 files in other folders)
