[project]
name = "labkey-mcp"
version = "0.1.0"
description = "MCP server for LabKey/Panorama access to analyze Skyline exception logs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "labkey>=3.0.0",
]

[project.scripts]
labkey-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
